[package]
name = "darknode-backend"
version = "0.1.0"
edition = "2021"
authors = ["DarkNode Team"]
description = "Backend infrastructure for DarkNode - The VPN for RPC Services"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
ed25519-dalek = "1.0"
x25519-dalek = "1.2"
chacha20poly1305 = "0.10"
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "8.3"
reqwest = { version = "0.11", features = ["json"] }
solana-sdk = "1.16"
solana-client = "1.16"
solana-transaction-status = "1.16"
solana-account-decoder = "1.16"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"
config = "0.13"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "entry-node"
path = "src/bin/entry_node.rs"

[[bin]]
name = "routing-node"
path = "src/bin/routing_node.rs"

[[bin]]
name = "exit-node"
path = "src/bin/exit_node.rs"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"
